Add imgui-node-editor as submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "third_party/nativefiledialog"]
 	path = third_party/nativefiledialog
 	url = https://github.com/mlabbe/nativefiledialog
+[submodule "third_party/imgui-node-editor"]
+	path = third_party/imgui-node-editor
+	url = https://github.com/thedmd/imgui-node-editor.git
